Refactor ScGridWindow::GetEditUrl()

To avoid code copy/pasting, common code is refactored to
`lcl_SetEngineTextKeepingDefaults` to be used later in
tdf#123159

Change-Id: I1889c8eee931ef8950e95af8aec73a1884b07302
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/158516
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
Tested-by: Jenkins